--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
     should not conflict with that defined in other apps, as such an app should embed its package
     name in the permissions. eq com.mypackage.permission.READ_SETTINGS
     -->
-    <permission
+<!--    <permission
         android:name="com.android.launcher3.permission.READ_SETTINGS"
         android:description="@string/permdesc_read_settings"
         android:label="@string/permlab_read_settings"
@@ -46,7 +46,7 @@
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
     <uses-permission android:name="com.android.launcher.permission.WRITE_SETTINGS"/>
     <uses-permission android:name="com.android.launcher3.permission.READ_SETTINGS"/>
-    <uses-permission android:name="com.android.launcher3.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="com.android.launcher3.permission.WRITE_SETTINGS"/>-->
 
     <application
         android:backupAgent="com.android.launcher3.LauncherBackupAgent"
